--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
   "devDependencies": {
     "@eslint/js": "^9.31.0",
+    "css-loader": "^7.1.2",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
     "globals": "^16.3.0",
+    "html-webpack-plugin": "^5.6.3",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
-    "simple-git-hooks": "^2.13.0"
+    "simple-git-hooks": "^2.13.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.100.2",
+    "webpack-cli": "^6.0.1"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
   },
   "scripts": {
-    "prepare": "simple-git-hooks"
+    "prepare": "simple-git-hooks",
+    "build": "webpack"
   },
-
   "lint-staged": {
-  "*.{js,mjs,cjs}": [
-    "eslint"
-  ]
-}
+    "*.{js,mjs,cjs}": [
+      "eslint"
+    ]
+  }
 }
