--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "html-webpack-plugin": "^5.6.3",
     "lint-staged": "^16.1.2",
@@ -19,7 +20,9 @@
   },
   "scripts": {
     "prepare": "simple-git-hooks",
-    "build": "webpack"
+    "build": "webpack",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "lint-staged": {
     "*.{js,mjs,cjs}": [
